--- a/index.html
+++ b/index.html
@@ -86,6 +86,42 @@ img {
 
 		<div class="grid_menu">
 
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="rss_4374.html">
+																	<img src="images/rss_feeds.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="rss_4374.html">
+				<label>RSS</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4376.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4376.html">
+				<label>StaticPage</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="rss_4375.html">
+																	<img src="images/rss_feeds.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="rss_4375.html">
+				<label>RSS</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4377.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4377.html">
+				<label>StaticPage</label>
+		</a>
+	</div>
+
 	
      
 </div>
