--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ img {
 
 			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="rss_4374.html">
-																	<img src="images/rss_feeds.png " />
+																	<img src="icon(214).png" />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="rss_4374.html">
 				<label>RSS</label>
