--- a/rss_4374.html
+++ b/rss_4374.html
@@ -22,7 +22,7 @@
 
 <link rel="stylesheet" href="css/static_page.css" />
 
-<!--ThemeSetting-->
+<link rel="stylesheet" href="css/colorbg_4374.css" />
 
 
 
@@ -52,7 +52,7 @@
 
 	  jQuery(function($) {
 
-        $("#rss-feeds").rss("http://news.google.com/output=rss", {
+        $("#rss-feeds").rss("http://rss.cnn.com/rss/cnn_topstories.rss", {
 
           limit: 15,
 
