--- a/index.html
+++ b/index.html
@@ -96,11 +96,20 @@ img {
 	</div>
 
 			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4377.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4377.html">
+				<label>StaticPage</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4376.html">
 																	<img src="images/staticpage.png " />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="staticpage_4376.html">
-				<label>StaticPage</label>
+				<label>single pages</label>
 		</a>
 	</div>
 
@@ -110,15 +119,6 @@ img {
 										</a>
 		<a  rel="external" data-ajax="flase"  href="rss_4375.html">
 				<label>RSS</label>
-		</a>
-	</div>
-
-			<div class="app_feature_list">
-			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4377.html">
-																	<img src="images/staticpage.png " />
-										</a>
-		<a  rel="external" data-ajax="flase"  href="staticpage_4377.html">
-				<label>StaticPage</label>
 		</a>
 	</div>
 
