--- a/staticpage_4376.html
+++ b/staticpage_4376.html
@@ -74,7 +74,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>StaticPage</h1>
+    <h1>single pages</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -88,7 +88,43 @@ img {
 
   
 
-  <p class="no_data">No Static page content </p>
+  hello test that part some sort of address to test that added functionlity soem sort of address to test that added functionlity here to test that&nbsp;<span class="breadcrumb"><a href="http://www.uen.org/">UEN</a></span> » <span class="breadcrumb"><a href="http://www.uen.org/feeds">RSS News Feeds</a></span> » <span class="breadcrumb">List of RSS Feeds - UEN</span><div class="page-title">
+<div class="share">
+<a href="http://www.addthis.com/bookmark.php" class="small"><img src="http://s7.addthis.com/static/btn/sm-plus.gif" alt="Share" class="img_middle" height="12" width="12"> Share</a>
+    <div id="_atssh" style="visibility: hidden; height: 1px; width: 1px; position: absolute; z-index: 100000;"><iframe src="http://ct1.addthis.com/static/r07/sh156.html#" style="height: 1px; width: 1px; position: absolute; z-index: 100000; border-width: 0px; border-style: none; left: 0px; top: 0px;" title="AddThis utility frame" id="_atssh878"></iframe></div>
+</div><br>
+<h6>Lists of RSS Feeds<img src="http://i.imgur.com/gyu56Is.jpg" style="font-size: 13px; line-height: normal; font-weight: normal;" width="695"></h6>
+<div class="clear"></div>
+</div>
+    <div id="page">
+			
+			<p>Here are some RSS feeds that you can add to your <a href="http://my.uen.org/" target="_blank">my.uen</a> RSS portlet. Simply copy the URL and paste it in text field on the edit screen of  the RSS portlet. </p>
+			<p>For example, the URL you would copy for <span class="bold">UEN's NetNews</span> is: 
+			  <input name="textfield" id="textfield" value="http://www.uen.org/feeds/rss/news.xml" size="35" type="text">&nbsp; &nbsp;&nbsp;<span class="breadcrumb"><a href="http://www.uen.org/">UEN</a></span> » <span class="breadcrumb"><a href="http://www.uen.org/feeds">RSS News Feeds</a></span> » <span class="breadcrumb">List of RSS Feeds - UEN</span></p><div class="page-title">
+<div class="share">
+<a href="http://www.addthis.com/bookmark.php" class="small"><img src="http://s7.addthis.com/static/btn/sm-plus.gif" alt="Share" class="img_middle" height="12" width="12"> Share</a>
+    <div id="_atssh" style="visibility: hidden; height: 1px; width: 1px; position: absolute; z-index: 100000;"><iframe src="http://ct1.addthis.com/static/r07/sh156.html#" style="height: 1px; width: 1px; position: absolute; z-index: 100000; border-width: 0px; border-style: none; left: 0px; top: 0px;" title="AddThis utility frame" id="_atssh878"></iframe></div>
+</div><br>
+<h6>Lists of RSS Feeds</h6>
+<div class="clear"></div>
+</div>
+    <div id="page">
+			
+			<p>Here are some RSS feeds that you can add to your <a href="http://my.uen.org/" target="_blank">my.uen</a> RSS portlet. Simply copy the URL and paste it in text field on the edit screen of  the RSS portlet. </p>
+			<p>For example, the URL you would copy for <span class="bold">UEN's NetNews</span> is: 
+			  <input name="textfield" id="textfield" value="http://www.uen.org/feeds/rss/news.xml" size="35" type="text"><span class="breadcrumb"><a href="http://www.uen.org/">UEN</a></span> » <span class="breadcrumb"><a href="http://www.uen.org/feeds">RSS News Feeds</a></span> » <span class="breadcrumb">List of RSS Feeds - UEN</span></p><div class="page-title">
+<div class="share">
+<a href="http://www.addthis.com/bookmark.php" class="small"><img src="http://s7.addthis.com/static/btn/sm-plus.gif" alt="Share" class="img_middle" height="12" width="12"> Share</a>
+    <div id="_atssh" style="visibility: hidden; height: 1px; width: 1px; position: absolute; z-index: 100000;"><iframe src="http://ct1.addthis.com/static/r07/sh156.html#" style="height: 1px; width: 1px; position: absolute; z-index: 100000; border-width: 0px; border-style: none; left: 0px; top: 0px;" title="AddThis utility frame" id="_atssh878"></iframe></div>
+</div><br>
+<h6>Lists of RSS Feeds</h6>
+<div class="clear"></div>
+</div>
+    <div id="page">
+			
+			<p>Here are some RSS feeds that you can add to your <a href="http://my.uen.org/" target="_blank">my.uen</a> RSS portlet. Simply copy the URL and paste it in text field on the edit screen of  the RSS portlet. </p>
+			<p>For example, the URL you would copy for <span class="bold">UEN's NetNews</span> is: 
+			  <input name="textfield" id="textfield" value="http://www.uen.org/feeds/rss/news.xml" size="35" type="text"><img src="http://i.imgur.com/wnGNwnI.jpg" width="640"></p></div></div></div>
 
   </div>
 
