--- a/more.html
+++ b/more.html
@@ -104,11 +104,20 @@
 	</div>
 
 			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4377.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4377.html">
+				<label>StaticPage</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4376.html">
 																	<img src="images/staticpage.png " />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="staticpage_4376.html">
-				<label>StaticPage</label>
+				<label>single pages</label>
 		</a>
 	</div>
 
@@ -118,15 +127,6 @@
 										</a>
 		<a  rel="external" data-ajax="flase"  href="rss_4375.html">
 				<label>RSS</label>
-		</a>
-	</div>
-
-			<div class="app_feature_list">
-			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4377.html">
-																	<img src="images/staticpage.png " />
-										</a>
-		<a  rel="external" data-ajax="flase"  href="staticpage_4377.html">
-				<label>StaticPage</label>
 		</a>
 	</div>
 
@@ -145,7 +145,7 @@
 
             <style> .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 40px !important; width: 60px!important;}		.nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }#tab1 .ui-icon { background:  url("icons_tech_1579.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab2 .ui-icon { background:  url("icons_communication_1092.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab3 .ui-icon { background:  url("64Px_-_504-11.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab4 .ui-icon { background:  url("64Px_-_504-210.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab5 .ui-icon { background:  url("more.png") 50% 50% no-repeat; background-size: 30px 30px; }</style>
 
-            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="rss_4374.html" id="tab2" data-icon="custom" rel="external"  data-gourl="rss_4374.html" class="" onclick="window.open('rss_4374.html','_self', 'location=yes')">RSS</a></li><li><a href="staticpage_4376.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4376.html" class="" onclick="window.open('staticpage_4376.html','_self', 'location=yes')">StaticPage</a></li><li><a href="rss_4375.html" id="tab2" data-icon="custom" rel="external"  data-gourl="rss_4375.html" class="" onclick="window.open('rss_4375.html','_self', 'location=yes')">RSS</a></li><li><a href="staticpage_4377.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4377.html" class="" onclick="window.open('staticpage_4377.html','_self', 'location=yes')">StaticPage</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
+            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="rss_4374.html" id="tab2" data-icon="custom" rel="external"  data-gourl="rss_4374.html" class="" onclick="window.open('rss_4374.html','_self', 'location=yes')">RSS</a></li><li><a href="staticpage_4377.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4377.html" class="" onclick="window.open('staticpage_4377.html','_self', 'location=yes')">StaticPage</a></li><li><a href="staticpage_4376.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4376.html" class="" onclick="window.open('staticpage_4376.html','_self', 'location=yes')">single pages</a></li><li><a href="rss_4375.html" id="tab2" data-icon="custom" rel="external"  data-gourl="rss_4375.html" class="" onclick="window.open('rss_4375.html','_self', 'location=yes')">RSS</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
 
         </div>	
 
