--- a/staticpage_4376.html
+++ b/staticpage_4376.html
@@ -24,7 +24,7 @@
 
 <!--ThemeSettingSubpage-->
 
-<!--ThemeSetting-->
+<link rel="stylesheet" href="css/imgbg_4376.css" />
 
 <script src="js/jquery_1.9.1.js"></script>
 
